Remove "Template by" line

--- a/architecture-examples/jquery/index.html
+++ b/architecture-examples/jquery/index.html
@@ -28,7 +28,7 @@
 	</section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>App and template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
+		<p>Created by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 	<script id="todo-template" type="text/x-handlebars-template">
