--- a/architecture-examples/spine/index.html
+++ b/architecture-examples/spine/index.html
@@ -39,7 +39,7 @@
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
 		<p>Inspired by the official <a href="https://github.com/maccman/spine.todos">Spine.Todos</a></p>
-		<p>App and template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
+		<p>Created by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
 	</footer>
 	<script type="text/x-handlebars-template" id="todo-template">
 	{{#this}}
