--- a/index.html
+++ b/index.html
@@ -8,51 +8,78 @@
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
+		<!--<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>-->
+		<link href="http://fonts.googleapis.com/css?family=Merriweather:400,300,700,900" rel="stylesheet">
 		<link href="site/css/bootstrap.min.css" rel="stylesheet">
 		<link href="site/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<link href="assets/base.css" rel="stylesheet">
 		<link href="site/css/main.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container">
-			<header class="hero-unit row">
-				<div class="span4 screenshot">
-					<img src="site/screenshot.png" width="528" height="330">
-				</div>
-				<div class="span5 header-title">
+			<header class="row">
+				<div class="span8">
 					<h1>TodoMVC</h1>
 					<p>
-						A common learning application for popular JavaScript MV* frameworks
+						Helping you <strong>select</strong> a framework
 						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://addyosmani.github.com/todomvc" data-via="addyosmani">Tweet</a>
 					</p>
 					<nav>
-						<a class="btn btn-primary btn-large" href="https://github.com/addyosmani/todomvc/zipball/v0.3">Download</a>
-						<a class="btn btn-large" href="http://github.com/addyosmani/todomvc">Follow on GitHub</a>
+						<a class="button" href="https://github.com/addyosmani/todomvc/zipball/v0.3"><span>Download <small>(1.0)</small></span></a>
+						<a class="button" href="http://github.com/addyosmani/todomvc"><span>Project on GitHub</span></a>
 					</nav>
-					<p style="font-size: 16px;">Check out our new subproject <a href="http://todomvc.com/labs">TodoMVC Labs</a></p>
+				</div>
+				<div class="span4">
+					<img id="icon" src="site/css/Todo MVC.png" width="400">
 				</div>
 			</header>
 			<div class="row">
 				<div class="span4">
-					<h2>Introduction</h2>
-					<p>Developers these days are spoiled with choice when it comes to selecting an <strong>MV* framework</strong> for structuring and organizing JavaScript web apps. Backbone, Spine, Ember (SproutCore 2.0), JavaScriptMVC... the list of new and stable solutions goes on and on, but just how do you <strong>decide</strong> on which to use in a sea of so many options?</p>
-					<p>To help solve this problem, we created <a href="http://github.com/addyosmani/todomvc">TodoMVC</a> - a project which offers the same Todo application implemented using MV* concepts in most of the popular JavaScript MV* frameworks of today.</p>
-					<p>Solutions look and feel the same, have a common simple feature-set and make it <strong>easy</strong> for you to compare the syntax and structure of different frameworks so you can select the one you feel the most comfortable with.</p>
-				</div>
-				<div class="span4" id="demos">
-					<h2>Demos</h2>
+					<h2>Architecture</h2>
 					<ul class="nav nav-pills">
 						<li>
 							<a href="architecture-examples/backbone/index.html" data-source="http://documentcloud.github.com/backbone/" data-content="Backbone.js gives structure to web applications by providing models with key-value binding and custom events, collections with a rich API of enumerable functions, views with declarative event handling, and connects it all to your existing API over a RESTful JSON interface.">Backbone.js</a>
 						</li>
 						<li>
-							<a href="dependency-examples/backbone_require/index.html" data-source="http://requirejs.org/" data-content="RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node. Using a modular script loader like RequireJS will improve the speed and quality of your code.">Backbone.js + RequireJS</a>
+							<a href="architecture-examples/emberjs/index.html" data-source="http://emberjs.com/" data-content="Ember is a JavaScript framework for creating ambitious web applications that eliminates boilerplate and provides a standard application architecture.">Ember.js</a>
 						</li>
 						<li>
-							<a href="architecture-examples/emberjs/index.html" data-source="http://emberjs.com/" data-content="Ember is a JavaScript framework for creating ambitious web applications that eliminates boilerplate and provides a standard application architecture.">Ember.js</a>
+							<a href="architecture-examples/javascriptmvc/todo/todo/index.html" data-source="http://javascriptmvc.com/" data-content="JavaScriptMVC is an open-source framework containing the best ideas in jQuery development. It guides you to successfully completed projects by promoting best practices, maintainability, and convention over configuration.">JavaScriptMVC</a>
+						</li>
+						<li>
+							<a href="architecture-examples/spine/index.html" data-source="http://spinejs.com/" data-content="Spine is a lightweight framework for building JavaScript web applications. Spine gives you an MVC structure and then gets out of your way, allowing you to concentrate on the fun stuff, building awesome web applications.">Spine.js</a>
+						</li>
+						<li>
+							<a href="architecture-examples/knockoutjs/index.html" data-source="http://knockoutjs.com/" data-content="Simplify dynamic JavaScript UIs by applying the Model-View-View Model (MVVM) pattern">Knockout</a>
+						</li>
+						<li>
+							<a href="architecture-examples/dojo/index.html" data-source="http://dojotoolkit.org/" data-content="Dojo saves you time and scales with your development process, using web standards as its platform. It’s the toolkit experienced developers turn to for building high quality desktop and mobile web applications.">Dojo</a>
+						</li>
+						<li>
+							<a href="architecture-examples/closure/index.html" data-source="http://code.google.com/closure/library/" data-content="The Closure Library is a broad, well-tested, modular, and cross-browser JavaScript library. You can pull just what you need from a large set of reusable UI widgets and controls, and from lower-level utilities for DOM manipulation, server communication, animation, data structures, unit testing, rich-text editing, and more.">Closure</a>
+						</li>
+					</ul>
+				</div>
+				<div class="span4">
+					<h2>Dependency</h2>
+					<ul class="nav nav-pills">
+						<li>
+							<a href="dependency-examples/backbone_require/index.html" data-source="http://requirejs.org/" data-content="RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node. Using a modular script loader like RequireJS will improve the speed and quality of your code.">Backbone.js + RequireJS</a>
 						</li>
 						<li>
 							<a href="dependency-examples/emberjs_require/index.html" data-source="http://emberjs.com" data-content="Ember is a JavaScript framework for creating ambitious web applications that eliminates boilerplate and provides a standard application architecture. This is an example of using it with AMD modules">Ember.js + RequireJS</a>
 						</li>
+						<li>
+							<a href="architecture-examples/dojo/index.html" data-source="http://dojotoolkit.org/" data-content="Dojo saves you time and scales with your development process, using web standards as its platform. It’s the toolkit experienced developers turn to for building high quality desktop and mobile web applications.">Dojo</a>
+						</li>
+						<li>
+							<a href="architecture-examples/closure/index.html" data-source="http://code.google.com/closure/library/" data-content="The Closure Library is a broad, well-tested, modular, and cross-browser JavaScript library. You can pull just what you need from a large set of reusable UI widgets and controls, and from lower-level utilities for DOM manipulation, server communication, animation, data structures, unit testing, rich-text editing, and more.">Closure</a>
+						</li>
+					</ul>
+				</div>
+				<div class="span4">
+					<h2>Realtime</h2>
+					<ul class="nav nav-pills">
 						<li>
 							<a href="architecture-examples/javascriptmvc/todo/todo/index.html" data-source="http://javascriptmvc.com/" data-content="JavaScriptMVC is an open-source framework containing the best ideas in jQuery development. It guides you to successfully completed projects by promoting best practices, maintainability, and convention over configuration.">JavaScriptMVC</a>
 						</li>
@@ -69,65 +96,34 @@
 							<a href="architecture-examples/closure/index.html" data-source="http://code.google.com/closure/library/" data-content="The Closure Library is a broad, well-tested, modular, and cross-browser JavaScript library. You can pull just what you need from a large set of reusable UI widgets and controls, and from lower-level utilities for DOM manipulation, server communication, animation, data structures, unit testing, rich-text editing, and more.">Closure</a>
 						</li>
 					</ul>
-					<ul class="nav nav-pills">
-						<li>
-							<a href="architecture-examples/yuilibrary/index.html" data-source="http://yuilibrary.com/" data-content="YUI's lightweight core and modular architecture make it scalable, fast, and robust. Built by frontend engineers at Yahoo!, YUI powers the most popular websites in the world.">YUILibrary</a>
-						</li>
-						<li>
-							<a href="architecture-examples/knockback/index.html" data-source="http://kmalakoff.github.com/knockback/" data-content="Knockback.js provides Knockout.js magic for Backbone.js Models and Collections.">Knockback.js</a>
-						</li>
-						<li>
-							<a href="architecture-examples/angularjs/index.html" data-source="http://angularjs.org/" data-content="What HTML would have been
-had it been designed for web apps">AngularJS</a>
-						</li>
-						<li>
-							<a href="architecture-examples/angularjs_persistencejs/index.html" data-source="http://persistencejs.org/" data-content="persistence.js is an asynchronous Javascript object-database mapper. It has database-independent abstractions and can therefore easily be ported to new databases.">Angular + PersistenceJS</a>
-						</li>
-						<li>
-							<a href="architecture-examples/extjs/index.html" data-source="http://www.sencha.com/products/extjs" data-content="Ext JS 4 is the next major advancement in our JavaScript framework. Featuring expanded functionality, plugin-free charting, and a new MVC architecture it's the best Ext JS yet. Create incredible web apps for every browser.">Ext.js</a>
-						</li>
-						<li>
-							<a href="architecture-examples/agilityjs/index.html" data-source="http://agilityjs.com" data-content="Agility.js is an MVC library for Javascript that lets you write maintainable and reusable browser code without the infrastructural overhead found in other MVC libraries. The goal is to enable developers to write web apps at least as quickly as with jQuery, while simplifying long-term maintainability through MVC objects.">Agility.js</a>
-						</li>
-						<li>
-							<a href="architecture-examples/jquery/index.html" data-source="http://jquery.com/" data-content="jQuery is a fast and concise JavaScript Library that simplifies HTML document traversing, event handling, animating, and Ajax interactions for rapid web development. jQuery is designed to change the way that you write JavaScript.">jQuery</a>
-						</li>
-						<li>
-							<a href="reference-examples/vanillajs/index.html" data-source="https://developer.mozilla.org/en/JavaScript" data-content="You know JavaScript right? :P">Vanilla JS</a>
-						</li>
-					</ul>
 				</div>
-				<div class="span4">
-					<h2>New in version 0.3</h2>
-					<ul class="vertical-space">
-						<li>Dojo (MV*) app</li>
-						<li>Closure (MV*) app</li>
-						<li>Fixes and rewrites to existing apps including Ember.js, Spine.js and Backbone.js</li>
-						<li>Updated jQuery-only app for those wishing to compare MV* vs. a version structured without it</i>
-						<li>A new boilerplate for Todo apps</li>
-						<li><a href="https://github.com/addyosmani/backbone-boilerplates">Initial work</a> on Todo apps integrated with back-end tech stacks (Backbone.js only for now)</li>
-					</ul>
+			</div>
+			<div class="row">
+				<div class="span6">
+					<img id="screenshot" src="site/screenshot.png">
+					<p style="font-size:25px;font-weight:400;margin-top:40px;font-style:italic">TodoMVC is a common learning application for popular JavaScript MV* frameworks</p>
+				</div>
+				<div class="span6">
+					<h2>Introduction</h2>
+					<p>Developers these days are spoiled with choice when it comes to selecting an <strong>MV* framework</strong> for structuring and organizing JavaScript web apps. Backbone, Spine, Ember (SproutCore 2.0), JavaScriptMVC... the list of new and stable solutions goes on and on, but just how do you <strong>decide</strong> on which to use in a sea of so many options?</p>
+					<p>To help solve this problem, we created <a href="http://github.com/addyosmani/todomvc">TodoMVC</a> - a project which offers the same Todo application implemented using MV* concepts in most of the popular JavaScript MV* frameworks of today.</p>
+					<p>Solutions look and feel the same, have a common simple feature-set and make it <strong>easy</strong> for you to compare the syntax and structure of different frameworks so you can select the one you feel the most comfortable with.</p>
 				</div>
 			</div>
 			<hr>
 			<div class="row">
 				<div class="span4">
-					<h2>Getting Started</h2>
-					<p>You can get setup with TodoMVC in just a few short steps:</p>
-					<p>
-						<ol class="vertical-space">
-							<li>Download the <a href="https://github.com/addyosmani/todomvc/zipball/v0.3">latest release</a>.</li>
-							<li>Run TodoMVC on a local server (using <a href="http://www.mamp.info">MAMP</a>, <a href="http://www.wampserver.com/en/">WAMP</a> or another suitable setup). You can then select an app to run using the 'Live demos' link to the left.</li>
-							<li>Browse through the Todo apps, examine their source and discover which framework you might feel the most comfortable working with.</li>
-						</ol>
-					</p>
+					<h2>Labs</h2>
+					<p>Once you've downloaded the latest release and played around with the apps, you'll want to decide on a specific framework to try out.</p>
+					<p>Study the syntax required for defining models, views and (where applicable) controllers and classes in the frameworks you're interested in and try your hand at editing the code to see how it feels using it first-hand.</p>
+					<p>Please <strong>ensure</strong> that if you're happy with this, you do spend more time investigating the framework (including reading the official docs, the source and its complete feature list). There's often a lot more to a framework than what we present in our examples.</p>
 				</div>
 				<div class="span4">
 					<h2>Selecting a Framework</h2>
 					<p>Once you've downloaded the latest release and played around with the apps, you'll want to decide on a specific framework to try out.</p>
 					<p>Study the syntax required for defining models, views and (where applicable) controllers and classes in the frameworks you're interested in and try your hand at editing the code to see how it feels using it first-hand.</p>
 					<p>Please <strong>ensure</strong> that if you're happy with this, you do spend more time investigating the framework (including reading the official docs, the source and its complete feature list). There's often a lot more to a framework than what we present in our examples.</p>
-			</div>
+				</div>
 				<div class="span4">
 					<h2>Getting Involved</h2>
 					<p>Is there a bug we haven't fixed or an MV* framework you feel would benefit from being included in TodoMVC?</p>
@@ -136,8 +132,12 @@ had it been designed for web apps">AngularJS</a>
 				</div>
 			</div>
 			<hr>
-			<footer>
-				<p>© TodoMVC. Brought to you by <a href="https://github.com/addyosmani">Addy Osmani</a> (lead), <a href="https://github.com/boushley">Aaron Boushley</a> and <a href="https://github.com/sindresorhus">Sindre Sorhus</a>.</p>
+			<footer class="credit">
+				<p>
+					Brought to you by
+					<a href="https://github.com/addyosmani"><img src="http://www.gravatar.com/avatar/96270e4c3e5e9806cf7245475c00b275?s=40">Addy Osmani</a> and
+					<a href="https://github.com/sindresorhus"><img src="http://www.gravatar.com/avatar/d36a92237c75c5337c17b60d90686bf9.png?s=40">Sindre Sorhus</a>
+				</p>
 				<p id="contributor-list">Big thanks to our magnificent contributors: <span></span></p>
 			</footer>
 		</div>
