--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -22,7 +22,7 @@
 	</section>
 	<div id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Created by <a href="http://addyosmani.github.com/todomvc/">Addy Osmani</a></p>
+		<p>Written by <a href="http://addyosmani.github.com/todomvc/">Addy Osmani</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
   
@@ -62,8 +62,8 @@
   <script src="js/init.js"></script>
   <script src="js/models/todo.js"></script>
   <script src="js/collections/todos.js"></script>
-  <script src="js/views/todoView.js"></script>
-  <script src="js/views/appView.js"></script>
+  <script src="js/views/todos.js"></script>
+  <script src="js/views/app.js"></script>
   <script src="js/routers/router.js"></script>
   <script src="js/app.js"></script>
 
