Next iteration on theme.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+		<!--<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>-->
 
 		<link href="site/css/bootstrap.min.css" rel="stylesheet">
 		<link href="site/css/bootstrap-responsive.css" rel="stylesheet">
@@ -19,50 +19,22 @@
 	</head>
 	<body>
 
-
-<div class="navbar navbar-fixed-top aquarius-base">
-      <div class="navbar-inner">
-        <div>
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="./index.html">TodoMVC</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active">
-                <a href="./index.html">Home</a>
-              </li>
-              <li class="">
-                <a href="./scaffolding.html">Contribute</a>
-              </li>
-              <li class="">
-                <a href="./base-css.html">About</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
 		<div class="container">
 			<header class="row">
 				<div class="span8">
-					<h1>TodoMVC</h1>
+					<img class="logo" src="site/img/logo.png" width="500"/>
 					<p>
 						Helping you <strong>select</strong> an MV* framework
 					</p>
 					<nav>
 
-			<a class="button black-button" href="https://github.com/addyosmani/todomvc/zipball/v0.3">Download (1.0)</a>
-			<a class="button red-button" href="http://github.com/addyosmani/todomvc">Watch On Github</a>
+			<a href="#" class="zocial quora">Download (1.0)</a>
+			<a href="#" class="zocial quora">Watch On GitHub</a>
 			
 					</nav>
 				</div>
 				<div class="span4">
-					<img id="icon" src="site/css/Todo MVC.png" width="400">
+					<img id="icon" src="site/css/Todo MVC.png" width="350">
 				</div>
 			</header>
 
@@ -75,22 +47,22 @@
 					</div>
 				<div class="span8">
 
-<h2>1.0 Apps</h2>
-			<p>* <span class="label label-inverse">R</span> = App also demonstrates routing</p>
+<h2>Our Stable Apps</h2>
+			<p>* <span class="label">R</span> = App also demonstrates routing</p>
 
 			<div class="row">
 				<div class="span2">
 							<a href="architecture-examples/angularjs/index.html" data-source="http://angularjs.org/" data-content="What HTML would have been
-had it been designed for web apps">AngularJS <span class="label label-inverse">R</span></a>
+had it been designed for web apps">AngularJS <span class="label">R</span></a>
 				</div>
 				<div class="span2">
-							<a href="architecture-examples/backbone/index.html" data-source="http://documentcloud.github.com/backbone/" data-content="Backbone.js gives structure to web applications by providing models with key-value binding and custom events, collections with a rich API of enumerable functions, views with declarative event handling, and connects it all to your existing API over a RESTful JSON interface.">Backbone.js <span class="label label-inverse">R</span></a>
+							<a href="architecture-examples/backbone/index.html" data-source="http://documentcloud.github.com/backbone/" data-content="Backbone.js gives structure to web applications by providing models with key-value binding and custom events, collections with a rich API of enumerable functions, views with declarative event handling, and connects it all to your existing API over a RESTful JSON interface.">Backbone.js <span class="label">R</span></a>
 				</div>
 				<div class="span2">
-							<a href="architecture-examples/emberjs/index.html" data-source="http://emberjs.com/" data-content="Ember is a JavaScript framework for creating ambitious web applications that eliminates boilerplate and provides a standard application architecture.">Ember.js <span class="label label-inverse">R</span></a>
+							<a href="architecture-examples/emberjs/index.html" data-source="http://emberjs.com/" data-content="Ember is a JavaScript framework for creating ambitious web applications that eliminates boilerplate and provides a standard application architecture.">Ember.js <span class="label">R</span></a>
 				</div>
 				<div class="span2">
-							<a href="architecture-examples/spine/index.html" data-source="http://spinejs.com/" data-content="Spine is a lightweight framework for building JavaScript web applications. Spine gives you an MVC structure and then gets out of your way, allowing you to concentrate on the fun stuff, building awesome web applications.">Spine.js <span class="label label-inverse">R</span></a>
+							<a href="architecture-examples/spine/index.html" data-source="http://spinejs.com/" data-content="Spine is a lightweight framework for building JavaScript web applications. Spine gives you an MVC structure and then gets out of your way, allowing you to concentrate on the fun stuff, building awesome web applications.">Spine.js <span class="label">R</span></a>
 				</div>
 			</div>
 
@@ -100,7 +72,7 @@ had it been designed for web apps">AngularJS <span class="label label-inverse">R
 							<a href="architecture-examples/knockoutjs/index.html" data-source="http://knockoutjs.com/" data-content="Simplify dynamic JavaScript UIs by applying the Model-View-View Model (MVVM) pattern">KnockoutJS</a>
 				</div>
 				<div class="span2">
-						<a href="architecture-examples/dojo/index.html" data-source="http://dojotoolkit.org/" data-content="Dojo saves you time and scales with your development process, using web standards as its platform. It’s the toolkit experienced developers turn to for building high quality desktop and mobile web applications.">Dojo <span class="label label-inverse">R</span></a>
+						<a href="architecture-examples/dojo/index.html" data-source="http://dojotoolkit.org/" data-content="Dojo saves you time and scales with your development process, using web standards as its platform. It’s the toolkit experienced developers turn to for building high quality desktop and mobile web applications.">Dojo <span class="label">R</span></a>
 				</div>
 				<div class="span2">
 							<a href="architecture-examples/yuilibrary/index.html" data-source="http://yuilibrary.com/" data-content="YUI's lightweight core and modular architecture make it scalable, fast, and robust. Built by frontend engineers at Yahoo!, YUI powers the most popular websites in the world.">YUILibrary</a>
@@ -113,16 +85,16 @@ had it been designed for web apps">AngularJS <span class="label label-inverse">R
 
 			<div class="row">
 				<div class="span2">
-							<a href="architecture-examples/closure/index.html" data-source="http://code.google.com/closure/library/" data-content="The Closure Library is a broad, well-tested, modular, and cross-browser JavaScript library. You can pull just what you need from a large set of reusable UI widgets and controls, and from lower-level utilities for DOM manipulation, server communication, animation, data structures, unit testing, rich-text editing, and more.">Closure <span class="label label-inverse">R</span></a>
+							<a href="architecture-examples/closure/index.html" data-source="http://code.google.com/closure/library/" data-content="The Closure Library is a broad, well-tested, modular, and cross-browser JavaScript library. You can pull just what you need from a large set of reusable UI widgets and controls, and from lower-level utilities for DOM manipulation, server communication, animation, data structures, unit testing, rich-text editing, and more.">Closure <span class="label">R</span></a>
 				</div>
 				<div class="span2">
 							<a href="architecture-examples/extjs/index.html" data-source="http://www.sencha.com/products/extjs" data-content="Ext JS 4 is the next major advancement in our JavaScript framework. Featuring expanded functionality, plugin-free charting, and a new MVC architecture it's the best Ext JS yet. Create incredible web apps for every browser.">Ext.js</a>
 				</div>
 				<div class="span2">
-							<a href="architecture-examples/agilityjs/index.html" data-source="http://agilityjs.com" data-content="Agility.js is an MVC library for Javascript that lets you write maintainable and reusable browser code without the infrastructural overhead found in other MVC libraries. The goal is to enable developers to write web apps at least as quickly as with jQuery, while simplifying long-term maintainability through MVC objects.">Agility.js <span class="label label-inverse">R</span></a>
+							<a href="architecture-examples/agilityjs/index.html" data-source="http://agilityjs.com" data-content="Agility.js is an MVC library for Javascript that lets you write maintainable and reusable browser code without the infrastructural overhead found in other MVC libraries. The goal is to enable developers to write web apps at least as quickly as with jQuery, while simplifying long-term maintainability through MVC objects.">Agility.js <span class="label">R</span></a>
 				</div>
 				<div class="span2">
-							<a href="architecture-examples/knockback/index.html" data-source="http://kmalakoff.github.com/knockback/" data-content="Knockback.js provides Knockout.js magic for Backbone.js Models and Collections.">Knockback.js <span class="label label-inverse">R</span></a>
+							<a href="architecture-examples/knockback/index.html" data-source="http://kmalakoff.github.com/knockback/" data-content="Knockback.js provides Knockout.js magic for Backbone.js Models and Collections.">Knockback.js <span class="label">R</span></a>
 				</div>
 			</div>
 
@@ -134,7 +106,7 @@ had it been designed for web apps">AngularJS <span class="label label-inverse">R
 				<a href="dependency-examples/backbone_require/index.html" data-source="http://requirejs.org/" data-content="RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node. Using a modular script loader like RequireJS will improve the speed and quality of your code.">Backbone.js + RequireJS</a>
 				</div>
 				<div class="span3">
-				<a href="dependency-examples/emberjs_require/index.html" data-source="http://emberjs.com" data-content="Ember is a JavaScript framework for creating ambitious web applications that eliminates boilerplate and provides a standard application architecture. This is an example of using it with AMD modules">Ember.js + RequireJS <span class="label label-inverse">R</span></a>
+				<a href="dependency-examples/emberjs_require/index.html" data-source="http://emberjs.com" data-content="Ember is a JavaScript framework for creating ambitious web applications that eliminates boilerplate and provides a standard application architecture. This is an example of using it with AMD modules">Ember.js + RequireJS <span class="label">R</span></a>
 				</div>
 			</div>
 
