--- a/architecture-examples/knockoutjs/index.html
+++ b/architecture-examples/knockoutjs/index.html
@@ -56,13 +56,10 @@
         </footer>
         <script src="../../assets/base.js"></script>
         <script src="js/lib/knockout-2.0.0.js"></script>
-        <!--Crossroad.js Begin -->
-        <script src="js/lib/signals.js"></script>
-        <script src="js/lib/crossroads.js"></script>
-        <script src="js/lib/route.js"></script>
-        <script src="js/lib/pattern_lexer.js"></script>
-        <script src="js/lib/intro.js"></script>
-        <!--Crossroad.js End -->
+        <!--Crossroad.js -->
+        <script src="../../assets/signals.min.js"></script>
+        <script src="../../assets/crossroads.min.js"></script>
+        <!-- / -->
         <script src="js/app.js"></script>
     </body>
 </html>
