Knockout: Upgrade to 2.1.0

--- a/architecture-examples/knockoutjs/index.html
+++ b/architecture-examples/knockoutjs/index.html
@@ -55,7 +55,7 @@
             <p>Patches/fixes for cross-browser compat: <a href="http://twitter.com/addyosmani">Addy Osmani</a></p>
         </footer>
         <script src="../../assets/base.js"></script>
-        <script src="js/lib/knockout-2.0.0.js"></script>
+        <script src="js/lib/knockout.min.js"></script>
         <!--Crossroad.js -->
         <script src="../../assets/signals.min.js"></script>
         <script src="../../assets/crossroads.min.js"></script>
