Add SocketStream to readme and site

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@ had it been designed for web apps. A version with several performance optimizati
 						</ol>
 					</p>
 				</div>
-			
-		
-		
+
+
+
 		<hr>
 
 			<div class="row">
@@ -183,6 +183,11 @@ had it been designed for web apps. A version with several performance optimizati
 						<li>
 							<a href="labs/architecture-examples/batman/index.html" data-source="http://batmanjs.org/" data-content="Batman.js is a framework for building rich web applications with CoffeeScript or JavaScript. App code is concise and declarative, thanks to a powerful system of view bindings and observable properties. The API is designed with developer and designer happiness as its first priority.">Batman.js *</a>
 						</li>
+
+
+						<li>
+							<a href="labs/architecture-examples/socketstream/index.html" data-source="http://www.socketstream.org" data-content="SocketStream is a fast, modular Node.js web framework dedicated to building realtime single-page apps">SocketStream + jQuery</a>
+						</li>
 						<li>
 							<a href="labs/architecture-examples/olives/index.html" data-source="https://github.com/flams/olives" data-content="Olives is a JS MVC framework that helps you create realtime UIs. It includes a set of AMD/CommonJS modules that are easily extensive, a high level of abstraction to reduce boilerplate and is based on socket.io, to provide a powerful means to communicate with node.js.">Olives *</a>
 						</li>
@@ -237,7 +242,7 @@ had it been designed for web apps. A version with several performance optimizati
 				</div>
 			</div>
 		</div>
-	
+
 
 
 			<hr>
