Updating CanJS script references to new cdn.

--- a/labs/architecture-examples/canjs/yui-widget/index.html
+++ b/labs/architecture-examples/canjs/yui-widget/index.html
@@ -26,7 +26,7 @@
 	</div>
 	<div id="calendar"></div>
 	<script src="http://yui.yahooapis.com/3.4.1/build/yui/yui-min.js"></script>
-	<script src="http://donejs.com/can/dist/edge/can.yui.js"></script>
+	<script src="http://canjs.us/release/latest/can.yui.js"></script>
 	<script src="todo.js"></script>
 </body>
 </html>
