--- a/labs/architecture-examples/canjs/zepto/index.html
+++ b/labs/architecture-examples/canjs/zepto/index.html
@@ -26,7 +26,7 @@
 			https://github.com/madrobby/zepto/commit/ab2a3ef0d18beaf768903f0943efd019a29803f0
 	-->
 	<script src="zepto.0.8-focusblur.js"></script>
-	<script src="http://donejs.com/can/dist/edge/can.zepto.js"></script>
+	<script src="http://canjs.us/release/latest/can.zepto.js"></script>
 	<script src="todo.js"></script>
 </body>
 </html>
