--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
+	<link rel="shortcut icon" href="site/favicon.ico">
 	<link rel="stylesheet" href="site/css/bootstrap.min.css">
-	<link rel="stylesheet" href="site/css/bootstrap-responsive.css">
+	<link rel="stylesheet" href="site/css/bootstrap-responsive.min.css">
 	<link rel="stylesheet" href="site/css/main.css">
 </head>
 <body>
 	<div class="container">
 		<header class="row">
 			<div class="span8">
-				<img class="logo" src="site/img/logo.png" width="500">
+				<img class="logo" src="site/img/logo.svg" width="500" height="86">
 				<p>Helping you <strong>select</strong> a MV* framework</p>
 				<nav>
 					<a href="#" class="zocial red">Download (1.0)</a>
@@ -135,7 +136,7 @@
 		<hr>
 		<div class="row">
 			<div class="span6">
-				<img class="screenshot" src="site/img/screenshot.png">
+				<img class="screenshot" src="site/img/screenshot.png" width="558" height="246">
 				<p class="tagline2">TodoMVC is a common learning application for popular JavaScript MV* frameworks</p>
 			</div>
 			<div class="span6">
@@ -182,8 +183,8 @@
 			</div>
 		</div>
 		<hr>
-		<div class="row applist labs">
-			<div class="span3">
+		<div class="row">
+			<div class="span12 applist labs">
 				<h2>Labs</h2>
 				<ul class="nav nav-pills">
 					<li>
@@ -284,14 +285,7 @@
 	</div>
 	<hr>
 	<footer class="credit">
-		<p>
-			Brought to you by
-			<a href="https://github.com/addyosmani">
-				<img src="http://www.gravatar.com/avatar/96270e4c3e5e9806cf7245475c00b275?s=40">Addy Osmani</a>
-			and
-			<a href="https://github.com/sindresorhus">
-				<img src="http://www.gravatar.com/avatar/d36a92237c75c5337c17b60d90686bf9.png?s=40">Sindre Sorhus</a>
-		</p>
+		<p>Brought to you by<a href="https://github.com/addyosmani"><img src="http://www.gravatar.com/avatar/96270e4c3e5e9806cf7245475c00b275?s=40" width="40" height="40">Addy Osmani</a> and <a href="https://github.com/sindresorhus"><img src="http://www.gravatar.com/avatar/d36a92237c75c5337c17b60d90686bf9.png?s=40" width="40" height="40">Sindre Sorhus</a></p>
 	</footer>
 </div>
 <script src="assets/jquery.min.js"></script>
