Site > Minor grammar tweak and breaking up text with paragraph.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<header class="row">
 			<div class="span8">
 				<img class="logo" src="site/img/logo.svg" width="500" height="86" alt="TodoMVC">
-				<p>Helping you <strong>select</strong> a MV* framework</p>
+				<p>Helping you <strong>select</strong> an MV* framework</p>
 				<nav>
 					<a href="#" class="zocial red">Download (1.0)</a>
 					<a href="https://github.com/addyosmani/todomvc" class="zocial red">Project on GitHub</a>
@@ -31,8 +31,8 @@
 		<div class="row">
 			<div class="span4">
 				<h2>Introduction</h2>
-				<p>Developers these days are spoiled with choice when it comes to selecting an <strong>MV* framework</strong>
-					for structuring and organizing JavaScript web apps. Backbone, Spine, Ember (SproutCore 2.0), JavaScriptMVC... the list of new and stable solutions goes on and on, but just how do you decide on which to use in a sea of so many options?</p>
+				<p>Developers these days are spoiled with choice when it comes to selecting an <strong>MV* framework</strong> for structuring and organizing JavaScript web apps.</p> 
+				<p>Backbone, Ember, AngularJS, Spine... the list of new and stable solutions goes on and on, but just how do you decide on which to use in a sea of so many options?</p>
 				<p>To help solve this problem, we created <a href="https://github.com/addyosmani/todomvc">TodoMVC</a> - a project which offers the same Todo application implemented using MV* concepts in most of the popular JavaScript MV* frameworks of today.</p>
 			</div>
 			<div class="span8">
