--- a/architecture-examples/emberjs/index.html
+++ b/architecture-examples/emberjs/index.html
@@ -15,7 +15,7 @@
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
 		<p>
-			Created by 
+			Created by
 			<a href="http://github.com/tomdale">Tom Dale</a>,
 			<a href="http://github.com/addyosmani">Addy Osmani</a>
 		</p>
@@ -63,7 +63,7 @@
 	<!-- /* Handlebars templates end */ -->
 	<script src="../../assets/base.js"></script>
 	<script src="../../assets/jquery.min.js"></script>
-	<script src="js/libs/handlebars-1.0.0.beta.6.js"></script>
+	<script src="../../assets/handlebars.min.js"></script>
 	<script src="js/libs/ember-latest.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/router.js"></script>
@@ -73,7 +73,7 @@
 	<script src="js/controllers/todos.js"></script>
 	<script src="js/views/application.js"></script>
 	<script src="js/views/todos.js"></script>
-	<script type="text/javascript">
+	<script>
 		Todos.initialize();
 	</script>
 </body>
